--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 
 }
 .phone{
-    width: 280px;
+    width:300px;
     height: 560px;
     border: 1px solid ;
     overflow-y:auto ;
@@ -28,4 +28,7 @@ body{
     color: red;
     cursor: pointer;
    
+}
+img{
+    padding-right: 10px;
 }
