--- a/style.css
+++ b/style.css
@@ -1,24 +1,26 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    background:radial-gradient(#eee,#ddd);
+
+body {
+    background: radial-gradient(#eee, #ddd);
     height: 100vh;
     width: 100%;
     display: flex;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
+}
 
+.phone {
+    width: 350px;
+    height: 100%;
+    border: 1px solid;
+    overflow-y: auto;
 }
-.phone{
-    width:350px;
-    height: 560px;
-    border: 1px solid ;
-    overflow-y:auto ;
-}
-.list-group span{
+
+.list-group span {
     position: absolute;
     top: 50%;
     left: 90%;
@@ -27,8 +29,21 @@ body{
     font-weight: 700;
     color: red;
     cursor: pointer;
-   
+    text-decoration: none;
 }
-img{
+
+img {
     padding-right: 10px;
+}
+
+@media (min-width:350px) and (max-width:600px) {
+    .phone {
+        width: 100vw;
+    }
+}
+
+@media (min-width:601px) {
+    .phone {
+        width: 605px;
+    }
 }
